Publish slack faq and zoom quickstart to site

--- a/quickstart/_posts/2020-07-06-zoom-qs.md
+++ b/quickstart/_posts/2020-07-06-zoom-qs.md
@@ -4,52 +4,75 @@ tags:
   - Zoom
 ---
 
-> Depending on your interests and needs, SESYNC can do any or all of the following: a) test out meeting settings and consult ahead of time; b) just schedule a meeting and transfer host role at meeting start; c) act as host or co-host throughout one or more meeting sessions to manage participants, breakout rooms, polls, and/or shared content; d) be "on call" during your meeting time for real-time support over chat, phone, or video. 
+*SESYNC can offer Zoom access, customization and technical support to help you get the most out of your virtual meeting. Start a discussion with SESYNC staff by emailing [cyberhelp@sesync.org](mailto:cyberhelp@sesync.org).*
 
-> Note: Due to restrictions on UMD's Zoom licenses, if SESYNC sets up a Zoom call for you, participants will need to be admitted from a Waiting Room by the host or a co-host throughout the duration of the meeting. We will be unable to make you host or co-host ahead of time. However, we can transfer host or co-host responsibilities to you as soon as the meeting starts.
+# What SESYNC Provides 
 
-# What we can provide
+1. **Access to enterprise Zoom meetings** - The free version of Zoom limits meetings to 45 minutes. We can provide access to enterprise Zoom and host meetings for your team without a time limit. 
 
-> Note that for real-time support (starting/managing calls), we are unlikely to be able to handle requests outside of 8am-6pm Monday-Friday Eastern Time (UTC-5 until 14 March 2021). 
+2. **Personalized consultation and trouble shooting** - SESYNC staff are available for consultation ahead of your scheduled meeting to discuss your team’s specific meeting needs and test out any meeting features and/or settings.  
 
-1. **Access to enterprise Zoom meetings** - The free version of Zoom limits meetings to 45 minutes. We can provide access to enterprise Zoom and schedule meetings for your team without a time limit. A SESYNC staff member will need to schedule the meeting and will therefore be the initial "host", but can assign co-hosts or re-assign the host role *once a meeting has started*. 
+3. **Help customize your meeting settings** - We can help you navigate available Zoom settings to strategize what will work best for your team.  *(e.g. Do you want your meeting recorded? Which zoom features will enhance your meeting experience? Will the meeting chat automatically be saved?)*
 
-2. **Help customize your meeting settings** - Start a discussion with SESYNC staff by emailing [cyberhelp@sesync.org](mailto:cyberhelp@sesync.org) to determine how to best make use of virtual conference technology for your meeting. Do you want to allow all guests in your meeting to be able to chat privately with each other? Have you ensured that everyone in the meeting can rename themselves e.g to add their pronouns? Will the meeting chat automatically be saved? We can help you navigate available options and strategize what will work best for your team. 
+4. **Manage participants during Zoom meetings** - SESYNC Zoom support allows your team to focus on discussion rather than meeting logistics.  A SESYNC staff member can act as meeting host or co-host (see details below) which may be particularly helpful if you plan to use features such as [breakout rooms](https://support.zoom.us/hc/en-us/articles/206476093-Enabling-breakout-rooms), annotating shared content/whiteboard, or [non-verbal feedback](https://support.zoom.us/hc/en-us/articles/115001286183-Nonverbal-feedback-during-meetings). *(Please note that this logistical role is distinct from facilitation support, where SESYNC staff help strategize meeting design and/or play an active role guiding meeting discussion.)*
 
-3. **Manage participants during Zoom meetings** - A SESYNC staff member can act as meeting host or co-host to allow everyone on your team to focus on discussion rather than meeting logistics. This may be particularly helpful if you plan to use features such as [breakout rooms](https://support.zoom.us/hc/en-us/articles/206476093-Enabling-breakout-rooms), annotating shared content/whiteboard, or [non-verbal feedback](https://support.zoom.us/hc/en-us/articles/115001286183-Nonverbal-feedback-during-meetings). Note that this logistical role is distinct from facilitation support, where SESYNC staff can help strategize meeting design and/or play an active role guiding discussion in a meeting session to help achieve your goals. 
+# Choosing a Level of Support 
+
+SESYNC can offer different levels of support depending on your team's needs. Check out the decision tree below to see which tier of support is the best fit for your group. 
+
+![Zoom Decision Tree](/assets/images/Zoom_Figure_V2.png)
+
+**IMPORTANT CONSIDERATIONS:**  
+* We are unlikely to be able to handle support requests outside of 8am-6pm Monday-Friday Eastern Time (UTC-5 until 14 March 2021).
+* We request that group’s have their final meeting times and dates confirmed at least two weeks prior to the meeting.  
+* If SESYNC sets up a Zoom call for your group we will be unable to make you host or co-host ahead of time. However, we can transfer host or co-host responsibilities as soon as the meeting starts.
 
 # Meeting Roles
 
-Everyone who participates in a Zoom call does not have access to the same features for controlling a meeting. There is one meeting **host** at any time which by default is the person who scheduled the meeting. That person can designate meeting participants as **co-hosts** who are able to manage participants, mute settings, and monitor for non-verbal feedback in addition to the host. Everyone else is a **guest**. See a comprehensive table comparing roles on Zoom's help page [here](https://support.zoom.us/hc/en-us/articles/360040324512-Roles-in-a-meeting). 
+Everyone who participates in a Zoom has different access to permissions for controlling the meeting. There is one meeting **host** at any time which by default is the person who scheduled the meeting. That person can transfer host and/or designate meeting participants as **co-hosts** who are able to manage participants, and/or monitor for non-verbal feedback in addition to the host. Everyone else is a **guest**. See a comprehensive table comparing roles on [Zoom's meeting role help page](https://support.zoom.us/hc/en-us/articles/360040324512-Roles-in-a-meeting). 
 
 ## Host
 
-* This is the person who schedules and starts the meeting. A meeting cannot start without the host. 
-* A meeting can have only one host at a time, but the host can transfer this role to another participant *once a meeting has started*. The original host can always "reclaim" this role, even if they leave the meeting and rejoin. 
+* This is the person who schedules and starts the meeting. A meeting cannot start without the host.
+* A meeting can have only one host at a time, but the host can transfer this role to another participant *once a meeting has started*. 
 * Only the host can: assign participants to breakout rooms, create a poll, assign other guests as hosts, control who participants can chat with, or end a meeting for all users.
 
 ## Co-host
 
-* Once a meeting starts, the host can assign co-host role to meeting participants.
+* Once a meeting starts, the host can assign co-host roles to meeting participants.
 * There is no limit on the number of co-hosts.
 * Co-hosts can manage participants such as mute/unmute all or some participants, remove attendees, or lock a meeting.
-* Co-hosts cannot answer polls, only guests. 
 
-# Screen Sharing 
+# Commonly Used Zoom Features 
 
-* If you want to share content with audio, make sure to click "share computer sound".
-* See Zoom documentation [here](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation) for advice on sharing a Powerpoint presentation
-* You can enable annotation/drawing on shared content, or on a blank "whiteboard" space e.g. for drawing diagrams. See Zoom documentation [here](https://support.zoom.us/hc/en-us/articles/115005706806-Using-annotation-tools-on-a-shared-screen-or-whiteboard)
+Zoom’s special features could enhance your group’s meeting experience.  Here are some of the most commonly used Zoom features by SESYNC teams and how they can be accessed during your meeting. 
 
-# Breakout Rooms
+## Screen Sharing 
 
-If you have more than 8 to 10 participants in your meeting, consider using breakout rooms to facilitate smaller group discussions. You can either have a random assignment of *n* people to *m* rooms, or manually arrange who goes to which room. This needs to be arranged by the meeting **host** (see description of roles above). The host can broadcast a message to all breakout rooms e.g. when to wrap up discussion, and can switch between breakout rooms. 
+* If you want to share content with audio, make sure to click ["share computer sound"](https://it.umn.edu/services-technologies/how-tos/zoom-share-device-sound-during-screen).
+* See the [Zoom documentation on sharing Powerpoint presentations](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation) for advice.
+* You can enable annotation/drawing on shared content, or on a blank "whiteboard" space e.g. for drawing diagrams. See the [Zoom documentation on annotation](https://support.zoom.us/hc/en-us/articles/115005706806-Using-annotation-tools-on-a-shared-screen-or-whiteboard)
 
-See Zoom's help page [here](https://support.zoom.us/hc/en-us/articles/206476093-Enabling-breakout-rooms) for more information. 
+## Breakout Rooms
+
+If you have more than 8 to 10 participants in your meeting, consider using breakout rooms to facilitate smaller group discussions. You can either have a random or automatic assignment of *n* people to *m* rooms, or predetermine who goes to which room using the manual setting. This needs to be arranged by the meeting **host** (see description of roles above). The host can broadcast a message to all breakout rooms e.g. when to wrap up discussion, and can switch between breakout rooms. 
+
+See [Zoom's help page on breakout rooms](https://support.zoom.us/hc/en-us/articles/206476093-Enabling-breakout-rooms) for more information. 
+
+![Breakout Rooms](/assets/images/Breakout_Rooms.png)
+
+## Record Your Meeting 
+
+Use Zoom’s recording feature to record your meeting’s presentations and discussions in active speaker or gallery view.  This is a great feature if you want to share meeting recordings with participants who might have been unable to join your call or just maintain records of your calls.  
+
+* Make sure to obtain permission from all participants of a call before recording in order to comply with state and federal laws.
+* The recording can be started by the meeting host or co-host and can be paused or stopped anytime during the call.
+* The recording, if requested, can include closed captioning to improve meeting accessibility.   
+* SESYNC can provide a downloadable link to access your meeting recording after the meeting concludes to share with your group. 
 
 # Protect Your Meeting
 
-Publicizing and sharing meeting links on social media can unfortunately invite unwanted participation by disruptive guests (e.g. "Zoombombing"). We therefore recommend only sharing the meeting link with invited participants. You can also protect your meeting by setting options for using a waiting room (required for SESYNC-hosted meetings), setting a meeting password, and controlling screen sharing permissions. See these articles for more guidance on how to change you Zoom settings and protect your meetings: 
+Publicizing and sharing meeting links on social media can unfortunately invite unwanted participation by disruptive guests (i.e., "Zoombombing"). We therefore recommend only sharing the meeting link with invited participants. You can also protect your meeting by setting a meeting password and controlling screen sharing permissions. See these articles for more guidance on how to change your Zoom settings and protect your meetings: 
 
 * [Security Settings for Zoom Meetings](https://umd.service-now.com/itsupport/?id=kb_article_view&sysparm_article=KB0015411&sys_kb_id=93a8eafadb7384904cb03562399619e4)
 * [How to Keep Uninvited Guests Out of Your Zoom Event](https://blog.zoom.us/wordpress/2020/03/20/keep-uninvited-guests-out-of-your-zoom-event/)
@@ -57,9 +80,7 @@ Publicizing and sharing meeting links on social media can unfortunately invite u
 
 # More Tips and Considerations
 
+* SESYNC's [Resources and Tips for Elevating Your Team Science in an All-Virtual World](https://www.sesync.org/resources-and-tips-for-elevating-your-team-science-in-an-all-virtual-world) 
 * GitLab's [handbook for using Zoom](https://about.gitlab.com/handbook/tools-and-tips/zoom/) is a great resource.
-* Obtain consent from all individuals prior to recording a meeting in order to comply with state and federal laws.
-* Zoom's web client has limited features compared to the desktop or phone app, e.g. screen sharing capabilities may depend on your operating system. See more details in the table [here](https://support.zoom.us/hc/en-us/articles/360027397692#note).
-* You can schedule one-time meetings, recurring meetings, or start a meeting "on the fly". 
-* See some tips here on how to arrange screens effectively [here](https://keepteaching.iu.edu/resources/zoom/pin-video.html).
-* Return to SESYNC's page on [Resources and Tips for Elevating Your Team Science in an All-Virtual World](https://www.sesync.org/resources-and-tips-for-elevating-your-team-science-in-an-all-virtual-world) 
+* Zoom's web client has limited features compared to the desktop or phone app, e.g. screen sharing capabilities may depend on your operating system. See more details in this [table](https://support.zoom.us/hc/en-us/articles/360027397692#note).
+* See some [tips on how to arrange screens effectively here](https://keepteaching.iu.edu/resources/zoom/pin-video.html).
