replace numbered list with bulleted

--- a/quickstart/_posts/2020-07-06-zoom-qs.md
+++ b/quickstart/_posts/2020-07-06-zoom-qs.md
@@ -8,13 +8,13 @@ tags:
 
 # What SESYNC Provides 
 
-1. **Access to enterprise Zoom meetings** - The free version of Zoom limits meetings to 45 minutes. We can provide access to enterprise Zoom and host meetings for your team without a time limit. 
+- **Access to enterprise Zoom meetings** - The free version of Zoom limits meetings to 45 minutes. We can provide access to enterprise Zoom and host meetings for your team without a time limit. 
 
-2. **Personalized consultation and trouble shooting** - SESYNC staff are available for consultation ahead of your scheduled meeting to discuss your team’s specific meeting needs and test out any meeting features and/or settings.  
+- **Personalized consultation and trouble shooting** - SESYNC staff are available for consultation ahead of your scheduled meeting to discuss your team’s specific meeting needs and test out any meeting features and/or settings.  
 
-3. **Help customize your meeting settings** - We can help you navigate available Zoom settings to strategize what will work best for your team.  *(e.g. Do you want your meeting recorded? Which zoom features will enhance your meeting experience? Will the meeting chat automatically be saved?)*
+- **Help customize your meeting settings** - We can help you navigate available Zoom settings to strategize what will work best for your team.  *(e.g. Do you want your meeting recorded? Which zoom features will enhance your meeting experience? Will the meeting chat automatically be saved?)*
 
-4. **Manage participants during Zoom meetings** - SESYNC Zoom support allows your team to focus on discussion rather than meeting logistics.  A SESYNC staff member can act as meeting host or co-host (see details below) which may be particularly helpful if you plan to use features such as [breakout rooms](https://support.zoom.us/hc/en-us/articles/206476093-Enabling-breakout-rooms), annotating shared content/whiteboard, or [non-verbal feedback](https://support.zoom.us/hc/en-us/articles/115001286183-Nonverbal-feedback-during-meetings). *(Please note that this logistical role is distinct from facilitation support, where SESYNC staff help strategize meeting design and/or play an active role guiding meeting discussion.)*
+- **Manage participants during Zoom meetings** - SESYNC Zoom support allows your team to focus on discussion rather than meeting logistics.  A SESYNC staff member can act as meeting host or co-host (see details below) which may be particularly helpful if you plan to use features such as [breakout rooms](https://support.zoom.us/hc/en-us/articles/206476093-Enabling-breakout-rooms), annotating shared content/whiteboard, or [non-verbal feedback](https://support.zoom.us/hc/en-us/articles/115001286183-Nonverbal-feedback-during-meetings). *(Please note that this logistical role is distinct from facilitation support, where SESYNC staff help strategize meeting design and/or play an active role guiding meeting discussion.)*
 
 # Choosing a Level of Support 
 
