--- a/blog/_posts/2021-09-01-open-data-esa-2021.md
+++ b/blog/_posts/2021-09-01-open-data-esa-2021.md
@@ -10,15 +10,15 @@ authors:
 youtubeId: XcjU_Cab0pk
 ---
 
-## The global pandemic increased the urgency of making data open and accessible
+### The global pandemic increased the urgency of making data open and accessible
 
 A key part of synthesis research has always been the use and reuse of existing datasets to ask new questions or address pressing issues. In fact, SESYNC teams are well-versed in using existing open, accessible datasets in their socio-environmental research. However, the pandemic led more scientists outside synthesis research to turn to existing open datasets because they could not safely collect data in the field and in the lab under new health protocols. These new or renewed efforts to use and reuse existing datasets exposed on-going hurdles to using these data, and prompted re-examination of what makes a dataset truly open and accessible.  
 
-## The opportunity to discuss how to do this better
+### The opportunity to discuss how to do this better
 
 A discussion about making and using open data seemed timely, so Cassandra Glaspie, Assistant Professor in the Oceanography and Coastal Sciences at Louisiana State University, convened an [Inspire session](https://www.esa.org/longbeach/program/inspire-schedule/) at the Ecological Society of America meeting, held virtually August 2-6, 2021.  After chatting with Dr. Glaspie, the data science team at SESYNC thought that this topic fit very well with what we do, and that this was a topic important to our researchers across all career stages. We put together a presentation highlighting some open datasets and how they are used in synthesis research, as well as a few thoughts on how to improve data openness and accessibility. 
 
-## Highlights from our presentation
+### Highlights from our presentation
 
 - Availability of open datasets is increasing as data publication increases.
 - Open data still doesn’t always mean accessible or usable data - let’s change that!
@@ -27,7 +27,7 @@ A discussion about making and using open data seemed timely, so Cassandra Glaspi
 - To make data widely usable, think about interdisciplinary connections across scales when designing disciplinary research projects.
 - To make data more re-usable, think about what information someone else would need to be able to reuse your research data?
 
-## View the presentation
+### View the presentation
 
 {% include youtubePlayer.html id=page.youtubeId %}
 
