--- a/blog/_posts/2019-09-25-ggplot-roundup.Rmd
+++ b/blog/_posts/2019-09-25-ggplot-roundup.Rmd
@@ -79,7 +79,7 @@ ggplot(mydata, aes(y = y)) +
 
 ### Putting it all together
 
-* For multi-panel plots, I like to "beef up" my plots using the [cowplot](https://cran.r-project.org/web/packages/cowplot/index.html) package in R. It has an intuitive way to arrange panels and add annotation labels, which is described in one of the package's [vignettes](https://cran.r-project.org/web/packages/cowplot/vignettes/plot_grid.html). 
+* For multi-panel plots, I like to "beef up" my plots using the [cowplot](https://cran.r-project.org/web/packages/cowplot/index.html) package in R. It has an intuitive way to arrange panels and add annotation labels, which is described on the package's [documentation page](https://wilkelab.org/cowplot/index.html). 
 
 The basic idea is to initiate an empty drawing canvas with the `ggdraw()` function, and then determined the location and sizing of each panel with `draw_plot()` functions. 
 
